--- a/school/index.html
+++ b/school/index.html
@@ -14,151 +14,161 @@
 
 </head>
 <body>
-  <div class="header">
+  <div class="ru">
+    <div class="header">
+        <div class="header__inner">
+            <nav class="nav" id="nav">
+              <a class="nav__link">
+                <a href="index.html" class="lang">Rus</a>
+                <a>/</a>
+                <a href="eng.html" class="lang">Eng</a>
+              </a>
+              <a class="nav__link" href="#about">О нас</a>
+              <a class="nav__link" href="#groups">Услуги</a>
+              <a class="nav__link nav__reg" href="#registration">Регистрация</a>
+              <a class="nav__link" href="#contacts">Контакты</a>
+
+            <a href="#" class="nav__link login">Log in</a>
+
+            </nav>
+            <div class="header__logo">
+              <a href="#bg1">
+                <img src="icons/ling.png" alt="">
+              </a>
+            </div>
+            <button class="nav-toggle" id="nav_toggle" type="button">
+              <span class="nav-toggle__item">Menu</span>
+          </button>
+
+        </div><!--Header__inner--> 
+    </div><!--Header-->
+
+    <div id="bg1">
+      <img class="bg__img" src="img/1.png" alt="">
+    </div>
+
+    <!--About Us-->
     <div class="container">
-      <div class="header__inner">
-          <nav class="nav" id="nav">
-            <a class="nav__link" href="#about">О нас</a>
-            <a class="nav__link" href="#groups">Группы online курсов</a>
-            <a class="nav__link nav__reg" href="#registration">Регистрация</a>
-            <a class="nav__link" href="#contacts">Контакты</a> 
-          </nav>
-          <div class="header__logo">
-            <a href="#bg1">
-              <img src="icons/ling.png" alt="">
-            </a>
+      <div id="about" class="about__us">
+        <h1 class="title">О нас</h1>
+        <div class="section">
+          <img src="img/about us/about_3.png" alt="">
+          <div class="text">
+            <p class="text__r">
+            LinguaLab - современный онлайн клуб английского языка в Черногории для детей и взрослых. Наша команда состоит из талантливых и энергичных преподавателей из разных стран мира. Вместе мы подобрали интересную программу, чтобы вы смогли развить навыки английского языка как можно лучше. Сотни текстов на различные познавательные темы, подробное объяснение правил, закрепительные упражнения и веселые игры - всё это есть в LinguaLab.</p>
           </div>
-          <button class="nav-toggle" id="nav_toggle" type="button">
-            <span class="nav-toggle__item">Menu</span>
-        </button>
-
-      </div><!--Header__inner--> 
+        </div><!--Section-->
+        <div class="section">
+          <div class="text">
+            <p class="text__l">		
+              В нашей команде работают специалисты, имеющие сертификаты TESOL (обучение английскому, как второму языку). Многие имеют опыт работы со студентами из разных стран, таких как Япония, Южная Корея, Монголия, Россия, Черногория и др.</p>
+              <p class="text__l">
+              Все наши сотрудники русскоязычные, поэтому они с легкостью смогут объяснить грамматические правила и новые слова начинающим. Если же вы обладаете достаточным уровнем знания языка — общение будет проходить полностью на английском.
+              </p>
+          </div>
+          <img src="img/about us/about_2.png" alt="">
+        </div><!--Section-->
+        <div class="section">
+          <img src="img/about us/about_1.png" alt="">
+          <div class="text">
+            <p class="text__r">
+              Для связи с участниками клуба мы используем удобную интерактивную платформу с видеосвязью. Никаких дополнительных программ на гаджет устанавливать не требуется — достаточно открыть личный кабинет в браузере.</p>
+              <p class="text__r">
+              Благодаря нашей онлайн-системе заниматься в LinguaLab можно из любой точки мира. Вы можете оттачивать языковые навыки даже находясь в поездках.</p>
+              <p class="text__r">
+              Мы создаём максимально удобные и комфортные условия на  нашей развивающей платформе.</p>
+          </div>
+        </div><!--Section-->
+      </div><!--About Us-->
     </div><!--Container-->
-  </div><!--Header-->
 
-  <div id="bg1">
-    <img class="bg__img" src="img/1.png" alt="">
-  </div>
+    <div>
+      <img class="bg__img" src="img/2.png" alt="">
+    </div>
 
-  <!--About Us-->
-  <div class="container">
-    <div id="about" class="about__us">
-      <h1 class="title">О нас</h1>
-      <div class="section">
-        <img src="img/about us/about_3.png" alt="">
+    <div class="container">
+      <div class="groups">
+        <h1 id="groups" class="title">Услуги</h1>
+        <div class="section">
+          <div class="text">
+            <p class="text__l">У нас открыто 9 основных групповых программ (на русском языке):</p>
+            <ul>
+              <li><p class="text__l group__txt">	7-11 лет - Beginner и Elementary+ уровни;</p></li>
+              <li><p class="text__l group__txt">12-14 лет - Elementary и Pre-intermediate+ уровни;</p></li>
+              <li><p class="text__l group__txt">15-18 лет - Intermediate и Upper-intermediate уровни;
+              </p></li>
+            <li><p class="text__l group__txt"> 18+ лет - Beginner/Elementary, Pre-intermediate/Intermediate, Upper-intermediate.</p></li></ul><br>
+            <p class="text__l">	Занятия проходят несколько раз в неделю, есть утренние и вечерние группы.</p>      
+          </div><!--Text-->
+          <img src="img/ groups/gr_1.png" alt="">
+        </div><!--Section-->
+        <div class="section">
+          <img src="img/ groups/gr_2.png" alt="">
         <div class="text">
           <p class="text__r">
-           LinguaLab - современный онлайн клуб английского языка в Черногории для детей и взрослых. Наша команда состоит из талантливых и энергичных преподавателей из разных стран мира. Вместе мы подобрали интересную программу, чтобы вы смогли развить навыки английского языка как можно лучше. Сотни текстов на различные познавательные темы, подробное объяснение правил, закрепительные упражнения и веселые игры - всё это есть в LinguaLab. </p>
-        </div>
-      </div><!--Section-->
-      <div class="section">
-        <div class="text">
-          <p class="text__l">		
-            В нашей команде работают преподаватели, которые специализируются в обучении английскому, как второму языку. Многие имеют опыт работы со студентами из разных стран, таких как Япония, Южная Корея, Монголия, Россия, Черногория и др. </p><br>
-            <p class="text__l">
-            Все наши сотрудники русскоязычные, поэтому они с легкостью смогут объяснить грамматические правила и новые слова начинающим. Если же студент обладает достаточным уровнем знания языка — занятие проходит полностью на английском.
-            </p>
-        </div>
-        <img src="img/about us/about_2.png" alt="">
-      </div><!--Section-->
-      <div class="section">
-        <img src="img/about us/about_1.png" alt="">
-        <div class="text">
-          <p class="text__r">
-	          Занятия проходят на удобной интерактивной платформе с видеосвязью. Никаких дополнительных программ на гаджет устанавливать не надо — достаточно открыть кабинет ученика в браузере.</p>
-        </div>
-      </div><!--Section-->
-    </div><!--About Us-->
-  </div><!--Container-->
-
-  <div>
-    <img class="bg__img" src="img/2.png" alt="">
-  </div>
-
-  <div class="container">
-    <div class="groups">
-      <h1 id="groups" class="title">Группы онлайн курсов</h1>
-      <div class="section">
-        <div class="text">
-          <p class="text__l">		Онлайн занятия доступны для жителей всех городов Черногории. У нас открыто 9 основных программ групповых курсов (с русскоязычным преподавателем; до 6 человек):</p><br>
-          <p class="text__l text__ll">С русскоязычным преподавателем:</p><br>
-          <ul>
-            <li><p class="text__l group__txt">	7-11 лет - Beginner и Elementary+ уровни;</p></li>
-            <li><p class="text__l group__txt">12-14 лет - Elementary и Pre-intermediate+ уровни;</p></li>
-            <li><p class="text__l group__txt">15-18 лет - Intermediate и Upper-intermediate уровни;
-            </p></li>
-          <li><p class="text__l group__txt"> 18+ лет - Beginner/Elementary, Pre-intermediate/Intermediate, Upper-intermediate.</p></li></ul><br>
-          <p class="text__l text__ll">	Занятия проходят 2 раза в неделю, есть утренние и вечерние группы.</p>      
-        </div><!--Text-->
-        <img src="img/ groups/gr_1.png" alt="">
-      </div><!--Section-->
-      <div class="section">
-        <img src="img/ groups/gr_2.png" alt="">
-      <div class="text">
-        <p class="text__r">Индивидуальные курсы с русскоязычным преподавателем открыты для всех возрастов, вне зависимости от уровня подготовки. Минимальный пакет — 10 занятий в месяц.</p><br>
-
-        <p class="text__r">С носителем языка:</p><br>
-        <ul>
-      <li><p class="text__r group__txt">От 16 лет — уровень Upper-intermediate и выше.</p><br></li>
-      </ul>
-        <p class="text__r">Набор на занятия в группах проходит раз в 3 месяца (в сентябре, январе, марте и июне). Запись на индивидуальные курсы открыта в любое время. Количество мест ограничено.</p>
-      </div>
-      </div>
-    </div><!--Groups-->
-  </div><!--Container-->
-
-  <div>
-    <img class="bg__img" src="img/3.png" alt="">
-  </div>
-
-  <div class="container">
-    <div class="registration">
-
-      <h1 id="registration"  class="title">Регистрация</h1>
-      <div class="section">
-        <div class="text">
-          <p class="text__l text__reg">Узнать свой уровень владения английским языком и зарегистрироваться на онлайн курсы можно здесь:
+            Индивидуальные занятия на русском-английском языке открыты для всех возрастов, вне зависимости от уровня подготовки. 
           </p><br>
-          <div class="btn">           
-            <button class="button" type="button">Регистрация<a class="but__link" href="registration/registration.html" target="_blank"></a>
-            </button>
-          </div><br>
-          <p class="text__l text__reg">После прохождения теста, вам на электронную почту придёт доступное расписание групповых и индивидуальных курсов, а также инструкция по оплате.
-          </p>
+          <p class="text__r">С носителем языка (только английский язык):</p>
+          <ul>
+            <li><p class="text__r group__txt">От 16 лет — уровень Upper-intermediate и выше.</p></li>
+        </ul>
         </div>
-        <img src="img/registr/reg.png" alt="">
-      </div><!--Section-->
+        </div>
+      </div><!--Groups-->
+    </div><!--Container-->
 
-    </div><!--Registration-->
-  </div><!--Container-->
+    <div>
+      <img class="bg__img" src="img/3.png" alt="">
+    </div>
 
-  <div>
-    <img class="bg__img" src="img/4.png" alt="">
+    <div class="container">
+      <div class="registration">
+
+        <h1 id="registration"  class="title">Регистрация</h1>
+        <div class="section">
+          <div class="text">
+            <p class="text__l text__reg">Узнать свой уровень владения английским языком и зарегистрироваться на онлайн занятия можно здесь:
+            </p><br>
+            <div class="btn">           
+              <button class="button" type="button">Регистрация<a class="but__link" href="registration/registration.html" target="_blank"></a>
+              </button>
+            </div><br>
+            <p class="text__l text__reg">После прохождения теста, вам на электронную почту придёт доступное расписание, а также информация по доступным способам оплаты.
+            </p>
+          </div>
+          <img src="img/registr/reg.png" alt="">
+        </div><!--Section-->
+
+      </div><!--Registration-->
+    </div><!--Container-->
+
+    <div>
+      <img class="bg__img" src="img/4.png" alt="">
+    </div>
+
+
+    <div class="container">
+      <h1 id="contacts" class="title title__c">Контакты</h1>
+      <div class="contacts">
+        <div class="contact">
+          <img class="icon" src="icons/telephone.png" alt="">
+          <a href="tel:+382 68 381 048" target="_blank">+382 68 381 048</a>
+        </div><!--Contact-->
+        <div class="contact">
+          <img class="icon" src="icons/email.png" alt="">
+          <a href="mailto:lingualab.me@gmail.com" target="_blank">lingualab.me@gmail.com</a>
+        </div><!--Contact-->
+        <div class="contact">
+          <img class="icon" src="icons/inst.png" alt="">
+          <a href="https://www.instagram.com/lingualab_mne/" target="_blank">lingualab_mne</a>
+        </div><!--Contact-->
+        <div class="contact whatsapp">
+          <img class="icon" src="icons/whats app.png" alt="">
+          <a href="https://api.whatsapp.com/send?phone=79625801008" target="_blank">+7 962 580 10 08</a>
+        </div><!--Contact-->
+      </div><!--Contacts-->
+    </div><!--Container-->
   </div>
-
-
-  <div class="container">
-    <h1 id="contacts" class="title title__c">Контакты</h1>
-    <div class="contacts">
-      <div class="contact">
-        <img class="icon" src="icons/telephone.png" alt="">
-        <a href="tel:+382 68 381 048" target="_blank">+382 68 381 048</a>
-      </div><!--Contact-->
-      <div class="contact">
-        <img class="icon" src="icons/email.png" alt="">
-        <a href="mailto:lingualab.me@gmail.com" target="_blank">lingualab.me@gmail.com</a>
-      </div><!--Contact-->
-      <div class="contact">
-        <img class="icon" src="icons/inst.png" alt="">
-        <a href="https://www.instagram.com/lingualab_mne/" target="_blank">lingualab_mne</a>
-      </div><!--Contact-->
-      <div class="contact whatsapp">
-        <img class="icon" src="icons/whats app.png" alt="">
-        <a href="https://api.whatsapp.com/send?phone=79625801008" target="_blank">+7 962 580 10 08</a>
-      </div><!--Contact-->
-    </div><!--Contacts-->
-  </div><!--Container-->
-
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
