--- a/school/registration/registration.html
+++ b/school/registration/registration.html
@@ -24,7 +24,7 @@
         </div>
         <div class="formname">
           <input id="checkbox" type="checkbox" name="checkbox" checked  onchange="check()"/>
-          <label for="checkbox">Согласен на обработку <a href="">персональных данных</a></label>    
+          <label for="checkbox">Согласен на обработку <a href="../confi.pdf" target="_blank">персональных данных</a></label>    
         </div><br>
         <button class="btn" type="submit" id="submitFF">Отправить сообщение</button>
     </form>
