--- a/school/index.html
+++ b/school/index.html
@@ -98,7 +98,7 @@
               <li><p class="text__l group__txt">15-18 лет - Intermediate и Upper-intermediate уровни;
               </p></li>
             <li><p class="text__l group__txt"> 18+ лет - Beginner/Elementary, Pre-intermediate/Intermediate, Upper-intermediate.</p></li></ul><br>
-            <p class="text__l">	Занятия проходят несколько раз в неделю, есть утренние и вечерние группы.</p>      
+            <p class="text__l">	Занятия проходят несколько раз в неделю, доступны утренние и вечерние группы.</p>      
           </div><!--Text-->
           <img src="img/ groups/gr_1.png" alt="">
         </div><!--Section-->
@@ -133,7 +133,7 @@
               <button class="button" type="button">Регистрация<a class="but__link" href="registration/registration.html" target="_blank"></a>
               </button>
             </div><br>
-            <p class="text__l text__reg">После прохождения теста, вам на электронную почту придёт доступное расписание, а также информация по доступным способам оплаты.
+            <p class="text__l text__reg">После прохождения теста, вам на электронную почту придёт актуальное расписание, а также информация по доступным способам оплаты.
             </p>
           </div>
           <img src="img/registr/reg.png" alt="">
