--- a/school/index.html
+++ b/school/index.html
@@ -152,7 +152,7 @@
       <div class="contacts">
         <div class="contact">
           <img class="icon" src="icons/telephone.png" alt="">
-          <a href="tel:+382 68 381 048" target="_blank">+382 68 381 048</a>
+          <a href="https://t.me/Aizenberg_L" target="_blank">+382 68 381 048</a>
         </div><!--Contact-->
         <div class="contact">
           <img class="icon" src="icons/email.png" alt="">
