--- a/school/eng.html
+++ b/school/eng.html
@@ -128,13 +128,10 @@
         <h1 id="registration"  class="title">Register</h1>
         <div class="section">
           <div class="text">
-            <p class="text__l text__reg">Here, you can check your English proficiency and sign up for online courses:
-            </p><br>
-            <div class="btn">           
-              <button class="button" type="button">Register<a class="but__link" href="registration/registration.html" target="_blank"></a>
-              </button>
-            </div><br>
-            <p class="text__l text__reg">You will get a relevant schedule and details on the several payment options by email after passing the test.
+            <p class="text__l text__reg">Send our administrator the code word "LinguaLab" in any of the ways listed in the contacts section to register. 
+            Together, we will decide a convenient time for you to take a test. This way will evaluate your level of English proficiency. 
+            </p>
+            <p class="text__l text__reg">After completing the test, you will receive an e-mail with the most recent schedule and details on the several payment options.
             </p>
           </div>
           <img src="img/registr/reg.png" alt="">
