--- a/school/index.html
+++ b/school/index.html
@@ -127,12 +127,8 @@
         <h1 id="registration"  class="title">Регистрация</h1>
         <div class="section">
           <div class="text">
-            <p class="text__l text__reg">Узнать свой уровень владения английским языком и зарегистрироваться на онлайн занятия можно здесь:
-            </p><br>
-            <div class="btn">           
-              <button class="button" type="button">Регистрация<a class="but__link" href="registration/registration.html" target="_blank"></a>
-              </button>
-            </div><br>
+            <p class="text__l text__reg">Для регистрации напишите кодовое слово "LinguaLab" нашему администратору любым способом, указанным в разделе контакты.  
+            Вместе, мы подберем удобное для вас время, чтобы пройти тест для определения уровня владения языком.</p>           
             <p class="text__l text__reg">После прохождения теста, вам на электронную почту придёт актуальное расписание, а также информация по доступным способам оплаты.
             </p>
           </div>
