--- a/school/eng.html
+++ b/school/eng.html
@@ -161,7 +161,7 @@
         </div><!--Contact-->
         <div class="contact whatsapp">
           <img class="icon" src="icons/whats app.png" alt="">
-          <a href="https://api.whatsapp.com/send?phone=79625801008" target="_blank">+7 962 580 10 08</a>
+          <a href="https://api.whatsapp.com/send?phone=38268381048" target="_blank">+382 68 381 048</a>
         </div><!--Contact-->
       </div><!--Contacts-->
     </div><!--Container-->
