--- a/school/index.html
+++ b/school/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <link href="main/style.css" rel="stylesheet">
+  <meta name="yandex-verification" content="30581e4c1021c166" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
