--- a/school/eng.html
+++ b/school/eng.html
@@ -29,7 +29,7 @@
               <a class="nav__link nav__reg" href="#registration">Register</a>
               <a class="nav__link" href="#contacts">Contacts</a>
 
-            <a href="#" class="nav__link login">Log in</a>
+            <a href="https://platform.lingua-lab.com/" class="nav__link login" target="_blank">Log in</a>
 
             </nav>
             <div class="header__logo">
