--- a/monte-i/index.html
+++ b/monte-i/index.html
@@ -979,7 +979,14 @@
       </div>
         <!--Poster
         =========================-->
-      <div id="poster" class="poster">Афиша</div>
+      <div id="poster" class="poster">
+        <div class="titles">
+          <h3 class="title__item">Афиша</h3>
+        </div>
+        <div class="poster__item">
+          <rssapp-carousel id="TAqqveMzvPOwiEfN"></rssapp-carousel><script src="https://widget.rss.app/v1/carousel.js" type="text/javascript" async></script>
+        </div>
+      </div>
         <!--Polyclinics
         =========================-->
       <div id="polyclinics" class="polyclinics">Медицина</div>
