--- a/monte-i/index.html
+++ b/monte-i/index.html
@@ -1493,9 +1493,36 @@
         =========================-->
 
       <div id="school" class="school">
-        <div class="titles">
-          <h3 class="title__item">Школа</h3>
-        </div>
+
+        <div class="section_header">
+          <h2 class="section__title">
+            <a href="">Школы</a></h2>
+          <div class="section__items">
+            <a id="school_state" class="section__item" onclick="">Государственные</a>
+            <a id="school_private"
+            class="section__item">Частные</a>
+            <a id="school_lang" 
+            class="section__item" onclick="">Языковые</a>
+            
+          </div>
+        </div><!--section_header-->
+
+        <!--Rent
+          =============================-->
+          <div class="slider__display">
+            <div class="sliders">
+
+              <div class="slider">
+                <a class="slider__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <div class="slider__picture slider__school">
+                    <h3>Перейти на сайт школы</h3>
+                  <img src="img/school/private.jpg" alt="">
+                </div>
+              </div><!--Slider-->
+
+            </div>
+          </div>
+
       </div>
 
         <!--Advertising
