--- a/school/index.html
+++ b/school/index.html
@@ -10,7 +10,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz@8..60&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <title>LinguaLab</title>
-  <link rel="icon" href="icons/LinguaLab.png">
+  <link rel="shortcut icon" href="icons/LinguaLab.ico" type="image/x-icon">
+  <link rel="con" href="icons/LinguaLab.ico" type="image/x-icon">
 <script src="app.js"></script>
 
 </head>
@@ -41,8 +42,8 @@
               <span class="nav-toggle__item">Menu</span>
           </button>
 
-        </div><!--Header__inner--> 
-    </div><!--Header-->
+      </div><!--Header__inner--> 
+  </div><!--Header-->
 
     <div id="bg1">
       <img class="bg__img" src="img/1.png" alt="">
