--- a/monte-i/index.html
+++ b/monte-i/index.html
@@ -1509,18 +1509,88 @@
 
         <!--Rent
           =============================-->
-          <div class="slider__display">
-            <div class="sliders">
+          <div class="slider__display school__display">
+            <div class="sliders school__sliders">
 
               <div class="slider">
-                <a class="slider__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <a class="slider__link" href="https://adriaticcollege.com/" target="_blank"></a>
                 <div class="slider__picture slider__school">
                     <h3>Перейти на сайт школы</h3>
                   <img src="img/school/private.jpg" alt="">
                 </div>
+                <div class="slider__desc">
+                  <h3>Adriatic College</h3>
+                  <p>Русскоговорящая</p>
+                  <p>С 1 по 10 класс</p>
+                </div>
               </div><!--Slider-->
 
-            </div>
+              <div class="slider">
+                <a class="slider__link" href="https://adriaticcollege.com/" target="_blank"></a>
+                <div class="slider__picture slider__school">
+                    <h3>Перейти на сайт школы</h3>
+                  <img src="img/school/private.jpg" alt="">
+                </div>
+                <div class="slider__desc">
+                  <h3>Adriatic College</h3>
+                  <p>Русскоговорящая</p>
+                  <p>С 1 по 10 класс</p>
+                </div>
+              </div><!--Slider-->
+
+              <div class="slider">
+                <a class="slider__link" href="https://adriaticcollege.com/" target="_blank"></a>
+                <div class="slider__picture slider__school">
+                    <h3>Перейти на сайт школы</h3>
+                  <img src="img/school/private.jpg" alt="">
+                </div>
+                <div class="slider__desc">
+                  <h3>Adriatic College</h3>
+                  <p>Русскоговорящая</p>
+                  <p>С 1 по 10 класс</p>
+                </div>
+              </div><!--Slider-->
+
+              <div class="slider">
+                <a class="slider__link" href="https://adriaticcollege.com/" target="_blank"></a>
+                <div class="slider__picture slider__school">
+                    <h3>Перейти на сайт школы</h3>
+                  <img src="img/school/private.jpg" alt="">
+                </div>
+                <div class="slider__desc">
+                  <h3>Adriatic College</h3>
+                  <p>Русскоговорящая</p>
+                  <p>С 1 по 10 класс</p>
+                </div>
+              </div><!--Slider-->
+
+              <div class="slider">
+                <a class="slider__link" href="https://adriaticcollege.com/" target="_blank"></a>
+                <div class="slider__picture slider__school">
+                    <h3>Перейти на сайт школы</h3>
+                  <img src="img/school/private.jpg" alt="">
+                </div>
+                <div class="slider__desc">
+                  <h3>Adriatic College</h3>
+                  <p>Русскоговорящая</p>
+                  <p>С 1 по 10 класс</p>
+                </div>
+              </div><!--Slider-->
+
+              <div class="slider">
+                <a class="slider__link" href="https://adriaticcollege.com/" target="_blank"></a>
+                <div class="slider__picture slider__school">
+                    <h3>Перейти на сайт школы</h3>
+                  <img src="img/school/private.jpg" alt="">
+                </div>
+                <div class="slider__desc">
+                  <h3>Adriatic College</h3>
+                  <p>Русскоговорящая</p>
+                  <p>С 1 по 10 класс</p>
+                </div>
+              </div><!--Slider-->
+
+            </div><!--Sliders-->
           </div>
 
       </div>
